# peano

./: Makefile  README.md  peano.cabal
src/Data/: Peano.hs
test/: InternalTests.hs  Main.hs
