name:          peano
version:       0.1
build-type:    Simple
cabal-version: >= 1.8
author:        Andrés Sicard-Ramírez
license:       MIT
license-file:  LICENSE
maintainer:    Andrés Sicard-Ramírez <asr@eafit.edu.co>
category:      Data
synopsis:      Peano natural numbers
tested-with:   GHC == 8.0.1
description:   Peano natural numbers and some instances.

library
  exposed-modules: Data.Peano
  hs-source-dirs: src

  build-depends:
    base         >= 4.5.0.0 && < 4.10
    , QuickCheck >= 2.8 && < 2.9

  if impl(ghc >= 8.0)
     ghc-options:
       -Wall
       -Widentities
       -Wincomplete-record-updates
       -Wincomplete-uni-patterns
       -Wmissing-import-lists
       -Wmissing-local-signatures
       -Wmonomorphism-restriction
       -Werror

test-suite internal
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        InternalTests.hs

  build-depends:
    base >= 4.5.0.0 && < 4.10
    , peano >= 0.1 && < 0.2
    , QuickCheck >= 2.8 && < 2.9

  if impl(ghc >= 8.0)
     ghc-options:
       -Wall
       -Widentities
       -Wincomplete-record-updates
       -Wincomplete-uni-patterns
       -Wmissing-import-lists
       -Wmissing-local-signatures
       -Wmonomorphism-restriction
       -Werror
