name:          peano
version:       0.1
build-type:    Simple
cabal-version: >= 1.8
author:        Andrés Sicard-Ramírez
license:       MIT
license-file:  LICENSE
maintainer:    Andrés Sicard-Ramírez <asr@eafit.edu.co>
category:      Data
synopsis:      Peano natural numbers
tested-with:   GHC == 8.2.2
description:   Peano natural numbers and some instances.

library
  exposed-modules: Data.Peano
  hs-source-dirs: src

  build-depends:
    base         >= 4.5.0.0 && < 4.11
    , QuickCheck >= 2.8 && < 2.9

  if impl(ghc >= 8.2)
     ghc-options: -Wall
                  -Wcpp-undef
                  -Widentities
                  -Wincomplete-record-updates
                  -Wincomplete-uni-patterns
                  -Wmissing-import-lists
                  -Wmissing-local-signatures
                  -Wmonomorphism-restriction
                  -Wsimplifiable-class-constraints
                  -Wunbanged-strict-patterns
                  -Werror

test-suite internal
  type:           detailed-0.9
  hs-source-dirs: test
  test-module:    InternalTests

  build-depends:
    base >= 4.5.0.0 && < 4.11
    , Cabal >= 1.18.1.5 && < 2.1
    , cabal-test-quickcheck >= 0.1.2 && < 0.2
    , peano >= 0.1 && < 0.2
    , QuickCheck >= 2.8 && < 2.9

  if impl(ghc >= 8.2)
     ghc-options: -Wall
                  -Wcpp-undef
                  -Widentities
                  -Wincomplete-record-updates
                  -Wincomplete-uni-patterns
                  -Wmissing-import-lists
                  -Wmissing-local-signatures
                  -Wmonomorphism-restriction
                  -Wsimplifiable-class-constraints
                  -Wunbanged-strict-patterns
                  -Werror
