name:          peano
version:       0.1
build-type:    Simple
cabal-version: >= 1.8
author:        Andrés Sicard-Ramírez
license:       MIT
license-file:  LICENSE
maintainer:    Andrés Sicard-Ramírez <asr@eafit.edu.co>
category:      Data
synopsis:      Peano natural numbers
tested-with:   GHC == 8.8.3
description:   Peano natural numbers and some instances.

library
  exposed-modules: Data.Peano
  hs-source-dirs: src

  build-depends:  base >= 4.5.0.0 && < 4.14
                , QuickCheck >= 2.13.1 && < 2.14

  if impl(ghc >= 8.2)
     ghc-options: -Wall
                  -Wcpp-undef
                  -Widentities
                  -Wincomplete-record-updates
                  -Wincomplete-uni-patterns
                  -Wmissing-import-lists
                  -Wmissing-local-signatures
                  -Wmonomorphism-restriction
                  -Wsimplifiable-class-constraints
                  -Wunbanged-strict-patterns
                  -Werror

test-suite internal
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs

  build-depends:  base >= 4.5.0.0 && < 4.13
                , peano
                , QuickCheck >= 2.13.1 && < 2.14

  if impl(ghc >= 8.2)
     ghc-options: -Wall
                  -Wcpp-undef
                  -Widentities
                  -Wincomplete-record-updates
                  -Wincomplete-uni-patterns
                  -Wmissing-import-lists
                  -Wmissing-local-signatures
                  -Wmonomorphism-restriction
                  -Wsimplifiable-class-constraints
                  -Wunbanged-strict-patterns
                  -Werror
